1.31v

Feature release:
1. Option to pass custom argument for chat, these arguments will be visible in chat form
Example:
<script type="text/javascript">
var LHCChatOptions = {};
LHCChatOptions.attr = new Array();
LHCChatOptions.attr.push({'name':'Basket id','value':'1212'});
LHCChatOptions.attr.push({'name':'User ID','value':'4555'});
(function() {
var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
po.src = 'http://<some_domain>/index.php/chat/getstatus/(position)/middle_right';
var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
})();
</script>

2. Option to prefill some form attributes in javascript
<script type="text/javascript">
LHCChatOptions.attr_prefill = new Array();
LHCChatOptions.attr_prefill.push({'name':'email','value':'remdex@gmail.com'});
LHCChatOptions.attr_prefill.push({'name':'phone','value':'370888888'});
LHCChatOptions.attr_prefill.push({'name':'username','value':'Remigijus Kiminas'});

(function() {
var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
po.src = 'http://<some_domain>/index.php/chat/getstatus/(position)/middle_right';
var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
})();
</script>


1.30v

Feature release:
1. Upgrade to Foundation 4 version
2. RTL language support

1.29v

Feature release:
1. FAQ module, show FAQ questions to your customers based on their URL.
2. Custom position from top if middle right or middle right is chosen.
3. Dutch translation, thanks to Robin Stuivenberg
4. MacOS bundle, requires QT 4.7 or 4.8 runtime library. Anyone can compile without dependency?

execute doc/update_db/update_20.sql

1.28v

Feature release:
1. Even more smarter way to check for new messages. Avoids query to messages table and first check that user last message id is lower than chat last message id.
It's better to add one query on message add than execute each time two queries.